# gifpicker

./: LICENSE  README.md  bump-version.sh  package.json  reset_db.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_gif_url.sql  003_add_clipboard_mode.sql  004_add_mp4_filepath.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  error.rs  favorites.rs  files.rs  hotkey.rs  mod.rs  search.rs  settings.rs  state.rs  system.rs  window.rs
src-tauri/src/db/: connection.rs  favorites.rs  mod.rs  settings.rs
src-tauri/src/models/: favorite.rs  mod.rs  settings.rs
src-tauri/src/services/: clipboard.rs  downloader.rs  giphy.rs  klipy.rs  mod.rs
src/lib/: types.ts
src/lib/components/: AdItem.svelte  CategoryItem.svelte  ContextMenu.svelte  HotkeyCapture.svelte  LandingChips.svelte  MasonryLayout.svelte  MediaItem.svelte  SearchBar.svelte  SearchSuggestionsTicker.svelte  Settings.svelte  Toast.svelte  UpdateDialog.svelte
src/lib/stores/: favorites.ts  recent.ts  search.ts  settings.ts  ui.ts  updater.ts
src/lib/utils/: copyMedia.ts  gridNavigation.ts  hotkey.ts
src/routes/: +page.svelte
